--- a/index.html
+++ b/index.html
@@ -12,49 +12,49 @@
       <title>Pets Furever</title>
    </head>
    <body>
-      <!-- NAVBAR/HEADER -->
-      <header>
-         <nav class="uk-navbar-container uk-background-primary uk-navbar">
-            <div class="uk-navbar-left"><a class="logo" href="index.html"><img src="./images/logo.png" alt="white dog paw"></a></div>
-            <div class="uk-navbar-center"><h1>Pets Furever</h1></div>
-            <div class="uk-navbar-right"><a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>Adopt today</a></div>
-         </nav>
-      </header>
-      <!-- ABOUT US MENU -->
-      <div id="offcanvas-slide" uk-offcanvas>
-         <div class="uk-offcanvas-bar">
-            <ul class="uk-nav uk-nav-default">
-               <!-- ABOUT PETS FUREVER -->
-               <li class="uk-nav-header">Pets Furever</li>
-               <li><p>All of us at Pets Furever have dogs and are passionate about making sure every dog has a home.</p></li>
-               <li><p>Pets furever is a very functional, easy-to-use application that makes adopting a pet simple and fun.</p></li>
-               <li><p>We are passionate about making sure every dog has a furever home.</p></li>
-               <li><p>Pets Furever used Rescue Group API to present the user all the dogs in their area that are in need of a loving home</p></li>
-               <!-- PETS FUREVER PAGE LINKS -->
-               <li class="uk-nav-header">Links</li>
-               <li class="uk-active"><a href="index.html">| Home |</a></li>
-               <li><a href="application.html">Adoption Application</a></li>
-               <li><a href="recipes.html">Pet Food Recipes</a></li>
-               <!-- COMING SOON -->
-               <li class="uk-nav-header">Coming Soon</li>
-               <li><a href="#">Search more than dogs</a></li>
-               <li><a href="#">adoption stories</a></li>
-               <!-- CREATED BY -->
-               <li class="uk-nav-header">Made by:</li>
-               <li><p>Diana Shull, Molly Sweetman and Trever Oveson.</p></li>
-            </ul>
-         </div>
+	<!-- NAVBAR/HEADER -->
+   <header>
+      <nav class="uk-navbar-container uk-navbar dark-background padding-20">
+         <div class="uk-navbar-left"><a class="logo" href="index.html"><img src="./images/logo.png" alt="white dog paw"></a></div>
+         <div class="uk-navbar-center"><h1>Pets Furever</h1></div>
+         <div class="uk-navbar-right"><a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>About Us</a></div>
+      </nav>
+   </header>
+   <!-- ABOUT US MENU -->
+   <div id="offcanvas-slide" uk-offcanvas>
+      <div class="uk-offcanvas-bar">
+         <ul class="uk-nav uk-nav-default">
+         <!-- ABOUT PETS FUREVER -->
+         <li class="uk-nav-header">Pets Furever</li>
+         <li><p>All of us at Pets Furever have dogs and are passionate about making sure every dog has a home.</p></li>
+         <li><p>Pets furever is a very functional, easy-to-use application that makes adopting a pet simple and fun.</p></li>
+         <li><p>We are passionate about making sure every dog has a furever home.</p></li>
+         <li><p>Pets Furever used Rescue Group API to present the user all the dogs in their area that are in need of a loving home</p></li>
+         <!-- PETS FUREVER PAGE LINKS -->
+         <li class="uk-nav-header">Links</li>
+         <li class="uk-active"><a href="index.html">| Home |</a></li>
+         <li><a href="application.html">Adoption Application</a></li>
+         <li><a href="recipes.html">Pet Food Recipes</a></li>
+         <!-- COMING SOON -->
+         <li class="uk-nav-header">Coming Soon</li>
+         <li><a href="#">Search more than dogs</a></li>
+         <li><a href="#">adoption stories</a></li>
+         <!-- CREATED BY -->
+         <li class="uk-nav-header">Made by:</li>
+         <li><p>Diana Shull, Molly Sweetman and Trever Oveson.</p></li>
+         </ul>
       </div>
+   </div>
       <!-- AT RISK DOGS -->
-      <div class="uk-container uk-container-small uk-margin">
+      <div class="uk-container dark-background padding-20 center-main-content">
          <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider="sets: true">
-            <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@m at-risk"></ul>
+            <ul class="uk-slider-items padding-20 uk-child-width-1-2 uk-child-width-1-3@m at-risk"></ul>
             <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
             <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
          </div>
       </div>
       <!-- SEARCH FORM -->
-      <div class="uk-container uk-container-small">
+      <div class="uk-container dark-background padding-20 center-main-content">
          <form>
             <fieldset class="uk-fieldset">
                <legend class="uk-legend">Find a pet!</legend>
