--- a/search.html
+++ b/search.html
@@ -1,62 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<!-- UIKIT STYLESHEET -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.7/dist/css/uikit.min.css" />
-	<!-- GOOGLE FONT STYLESHEET -->
-	<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-	<!-- PERSONAL STYLESHEET -->
-	<link rel="stylesheet" href="./assets/styles.css"/>
-	<title>Pet Search Results</title>
-</head>
-<body>
-	      <!-- NAVBAR/HEADER -->
-      <header>
-         <nav class="uk-navbar-container uk-background-primary uk-navbar">
-            <div class="uk-navbar-left"><a class="logo" href="index.html"><img src="./images/logo.png" alt="white dog paw"></a></div>
-            <div class="uk-navbar-center"><h1>Pets Furever</h1></div>
-            <div class="uk-navbar-right"><a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>About Us</a></div>
-         </nav>
-      </header>
-      <!-- ABOUT US MENU -->
-      <div id="offcanvas-slide" uk-offcanvas>
-         <div class="uk-offcanvas-bar">
-            <ul class="uk-nav uk-nav-default">
-               <!-- ABOUT PETS FUREVER -->
-               <li class="uk-nav-header">Pets Furever</li>
-               <li><p>All of us at Pets Furever have dogs and are passionate about making sure every dog has a home.</p></li>
-               <li><p>Pets furever is a very functional, easy-to-use application that makes adopting a pet simple and fun.</p></li>
-               <li><p>We are passionate about making sure every dog has a furever home.</p></li>
-               <li><p>Pets Furever used Rescue Group API to present the user all the dogs in their area that are in need of a loving home</p></li>
-               <!-- PETS FUREVER PAGE LINKS -->
-               <li class="uk-nav-header">Links</li>
-               <li class="uk-active"><a href="index.html">| Home |</a></li>
-               <li><a href="application.html">Adoption Application</a></li>
-               <li><a href="recipes.html">Pet Food Recipes</a></li>
-               <!-- COMING SOON -->
-               <li class="uk-nav-header">Coming Soon</li>
-               <li><a href="#">Search more than dogs</a></li>
-               <li><a href="#">adoption stories</a></li>
-               <!-- CREATED BY -->
-               <li class="uk-nav-header">Made by:</li>
-               <li><p>Diana Shull, Molly Sweetman and Trever Oveson.</p></li>
-            </ul>
-         </div>
-      </div>
-	<!-- CARD CONTAINER -->
-	<section class="card-container uk-align-center">
-		<!-- DYNAMIC DOG DATA GOES HERE -->
-	</section>
-	<!-- JQUERY SCRIPT -->
-	<script src="https://code.jquery.com/jquery-3.5.1.js"
-		integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-	<!-- UIKIT SCRIPT -->
-	<script src="https://cdn.jsdelivr.net/npm/uikit@3.5.7/dist/js/uikit.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/uikit@3.5.7/dist/js/uikit-icons.min.js"></script>
-	<!-- PERSONAL SCRIPT -->
-	<script src="assets/script.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- UIKIT STYLESHEET -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.7/dist/css/uikit.min.css" />
+		<!-- GOOGLE FONT STYLESHEET -->
+		<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+		<!-- PERSONAL STYLESHEET -->
+		<link rel="stylesheet" href="./assets/styles.css"/>
+		<title>Pet Search Results</title>
+	</head>
+	<body>
+		<!-- NAVBAR/HEADER -->
+		<header>
+			<nav class="uk-navbar-container uk-navbar dark-background padding-20">
+				<div class="uk-navbar-left"><a class="logo" href="index.html"><img src="./images/logo.png" alt="white dog paw"></a></div>
+				<div class="uk-navbar-center"><h1>Pets Furever</h1></div>
+				<div class="uk-navbar-right"><a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>About Us</a></div>
+			</nav>
+		</header>
+		<!-- ABOUT US MENU -->
+		<div id="offcanvas-slide" uk-offcanvas>
+			<div class="uk-offcanvas-bar">
+				<ul class="uk-nav uk-nav-default">
+				<!-- ABOUT PETS FUREVER -->
+				<li class="uk-nav-header">Pets Furever</li>
+				<li><p>All of us at Pets Furever have dogs and are passionate about making sure every dog has a home.</p></li>
+				<li><p>Pets furever is a very functional, easy-to-use application that makes adopting a pet simple and fun.</p></li>
+				<li><p>We are passionate about making sure every dog has a furever home.</p></li>
+				<li><p>Pets Furever used Rescue Group API to present the user all the dogs in their area that are in need of a loving home</p></li>
+				<!-- PETS FUREVER PAGE LINKS -->
+				<li class="uk-nav-header">Links</li>
+				<li class="uk-active"><a href="index.html">| Home |</a></li>
+				<li><a href="application.html">Adoption Application</a></li>
+				<li><a href="recipes.html">Pet Food Recipes</a></li>
+				<!-- COMING SOON -->
+				<li class="uk-nav-header">Coming Soon</li>
+				<li><a href="#">Search more than dogs</a></li>
+				<li><a href="#">adoption stories</a></li>
+				<!-- CREATED BY -->
+				<li class="uk-nav-header">Made by:</li>
+				<li><p>Diana Shull, Molly Sweetman and Trever Oveson.</p></li>
+				</ul>
+			</div>
+		</div>
+		<!-- CARD CONTAINER -->
+		<section class="dog-card-container center-main-content">
+			<!-- DYNAMIC DOG DATA GOES HERE -->
+		</section>
+		<!-- JQUERY SCRIPT -->
+		<script src="https://code.jquery.com/jquery-3.5.1.js"
+			integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+		<!-- UIKIT SCRIPT -->
+		<script src="https://cdn.jsdelivr.net/npm/uikit@3.5.7/dist/js/uikit.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/uikit@3.5.7/dist/js/uikit-icons.min.js"></script>
+		<!-- PERSONAL SCRIPT -->
+		<script src="assets/script.js"></script>
+	</body>
 </html>
