--- a/recipes.html
+++ b/recipes.html
@@ -14,16 +14,20 @@
 <body>
     <!-- Navbar -->
 	<header>
-		<nav class="uk-navbar-container uk-background-primary" uk-navbar>
-			<div class="uk-navbar-left">
-				<a class="logo" href="#"><img src="./images/logo.png" alt="white dog paw"></a>
-			</div>
+		<nav class="uk-navbar-container uk-navbar dark-background padding-20">
+			<div class="uk-navbar-left"><a class="logo" href="index.html"><img src="./images/logo.png"
+						alt="white dog paw"></a></div>
 			<div class="uk-navbar-center">
 				<h1>Pets Furever</h1>
 			</div>
-			<div class="uk-navbar-right"> <a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>About Us</a> </div>
+			<div class="uk-navbar-right">
+				<ul class="uk-navbar-nav uk-visible@s">
+					<a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>About Us</a>
+				</ul>
+				<a href="#offcanvas-slide" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-iconuk-toggle="target: #offcanvas-slide"></a>
+			</div>
 		</nav>
-    </header>
+	</header>
     <!-- about us menu -->
 	<div id="offcanvas-slide" uk-offcanvas>
 		<div class="uk-offcanvas-bar">
@@ -68,7 +72,7 @@
             </div>
             <div class="uk-navbar-right"> <a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>About Us</a> </div>
         </nav>
-    </header>
+    </div>
     <!-- about us menu -->
     <div id="offcanvas-slide" uk-offcanvas>
         <div class="uk-offcanvas-bar">
